# zorum-ai

./: BUILD_GUIDE.md  CLAUDE.md  Makefile  ZORUM_TECHNICAL_PLAN.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 519b0386084f_kernel_tables.py  c06b589a9c64_timestamptz_everywhere.py  c2313a51a594_rls_policies.py
backend/app/: config.py  db.py  main.py  models_registry.py  seed.py
backend/app/core/audit/: models.py  service.py
backend/app/core/auth/: deps.py  emails.py  invitations.py  jwt.py  models.py  passwords.py  router.py  schemas.py  service.py
backend/app/core/modules/: models.py
backend/app/core/tenancy/: models.py
backend/tests/: conftest.py  test_auth_flow.py  test_tenant_isolation.py
frontend/: package-lock.json  package.json
