[project]
name = "zorum-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "asyncpg>=0.31.0",
    "boto3>=1.43.46",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pgvector>=0.5.0",
    "procrastinate>=3.9.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
# One event loop for the whole test session: our global DB engines' pooled
# connections are loop-bound, and per-test loops would orphan them.
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"

[dependency-groups]
dev = [
    "import-linter>=2.13",
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]
